<?xml version="1.0"?>
<package format="2">
  <name>beginner_tutorials</name>
  <version>0.1.0</version>
  <description>ENPM808x ROS Part 1 - Beginner Tutorials Package</description>

  <maintainer email="arpitdec5@gmail.com">Arpit Aggarwal</maintainer>
  <license>MIT</license>
  <url type="website">http://wiki.ros.org/beginner_tutorials</url>
  <author email="arpitdec5@gmail.com">Arpit Aggarwal</author> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
