<?xml version="1.0"?>
<package format="2">
  <name>beginner_tutorials</name>
  <version>0.1.0</version>
  <description>ENPM808x ROS: Beginner Tutorials Package</description>

  <maintainer email="arpitagg@umd.edu">Arpit Aggarwal</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/arp95/beginner_tutorials</url>
  <author email="arpitagg@umd.edu">Arpit Aggarwal</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>rostest</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>rostest</exec_depend>
</package>
